# xFEM-Physics

./: CMakeLists.txt  README.md
Physics/materials/: xpCapacitive.cc  xpCapacitive.h  xpCarreau.cc  xpCarreau.h  xpConductive.cc  xpConductive.h  xpConvective.h  xpFluidWithLevelSet.cc  xpFluidWithLevelSet.h  xpNewtonianIncompFluid.cc  xpNewtonianIncompFluid.h  xpPowerLawFluid.cc  xpPowerLawFluid.h
Physics/src/: xPhysSurf3.cc  xPhysSurf3.h  xpAppli.cc  xpAppli.h  xpConvection.cc  xpConvection.h  xpElastic.cc  xpElastic.h  xpElasticContact.cc  xpElasticContact.h  xpEval.cc  xpEval.h  xpFluidMechanics.cc  xpFluidMechanics.h  xpFluidMechanicsContact.cc  xpFluidMechanicsContact.h  xpLevelSetConvector.cc  xpLevelSetConvector.h  xpLoopSolver.h  xpModifiedLoopSolver.h  xpPhysicalFormulation.cc  xpPhysicalFormulation.h  xpResolutionScheme.cc  xpResolutionScheme.h  xpThermic.cc  xpThermic.h  xpThermicTransient.cc  xpThermicTransient.h  xpTimePilot.cc  xpTimePilot.h
